fix to author by-line on small cards

--- a/static/css/partials/_card-sm.scss
+++ b/static/css/partials/_card-sm.scss
@@ -205,7 +205,6 @@
                     }
 
                     > .author{
-                        margin-top:5px;
                         position: static;
 
                         >p {
